force-app/main/default/objects/LegalAdvisors__c/LegalAdvisors__c.object-meta.xml
<CustomObject>
    <label>Legal Advisor</label>
    <nameField>
        <label>LegalAdvisors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Advisors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>