force-app/main/default/objects/LegalAdvisors__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <length>34</length>
    <type>Text</type>
</CustomField>