force-app/main/default/objects/LegalAdvisors__c/fields/Clients__c.field-meta.xml
<CustomField>
    <fullName>Clients__c</fullName>
    <description>Clients that a legal advisor has</description>
    <label>Clients</label>
    <summaryForeignKey>Client__c.Legal_Advisor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>