force-app/main/default/objects/LegalAdvisors__c/fields/Created_by_Syster_Admin__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Syster_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by Syster Admin?</label>
    <type>Checkbox</type>
</CustomField>